--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1310,7 +1310,7 @@ en:
         price_excludes_vat: "The price doesn't include VAT."
         delivery: "Delivery"
         shipping: "Shipping"
-        shipping_price: "Shipping price"
+        shipping_price: "Shipping fee"
         pickup: "Pickup"
       origin:
         location: Location
